# irec

./: README.md  mavlink-definitions.xml
.github/workflows/: flight-software.yml  ground-control.yml
flight-software/: Makefile
flight-software/Core/Src/: flight_staging.c
flight-software/Core/Src/Tasks/: task_sdcard.c
ground-control/: .gitignore  Cargo.toml  README.md  app.py  arm_simulator.py  build.rs  main.py  map.osm  monitor.py  osmap_trial  packetData.csv  packetlib.py  requirements.txt  simulator.py  simulator_data_flight_data_2.csv  telemetry.py  test.py  test.txt  test1.txt  testToby.txt
ground-control/.cargo/: config.toml
ground-control/components/: app_component.py  data_series.py
ground-control/data_controllers/: data_controller.py  iliad_data_controller.py  serial_data_controller.py
ground-control/grapher/: grapher.py  import dearpygui.dearpygui as dpg.py  numerical_data_view.py  python
ground-control/iliad/: arm_control.py
ground-control/layout/: GUI.py  LineColorPicker.py  MultipleTabs.py  OSUGC.py  Querying.py  TestLayout.py  constants.py  demoCode.py  tempCodeRunnerFile.py
ground-control/layout/tests/: ColorsAndStyles.py  ContainerStack.py  CursorPlot.py  DynamicSinPlot.py  Querying copy.py  RenderLoop.py  fonts.py
ground-control/serial_test/: data_controller.py  iliad_data_controller.py  main.py  monitor.py  packet.py  packet_util.py  serial_data_controller.py
ground-control/src/: connection.rs  dashboard_tab.rs  data.rs  graphs.rs  lib.rs  live_tab.rs  livetab.rs  main.rs  plot_tab.rs  plottab.rs  serial_connection.rs  telemetry.rs  trajectory_tab.rs  trajectorytab.rs  vis3d.rs
ground-control/src/assets/models/: untitled.gltf
ground-control/src/mavlink_definitions/: bsli2025.xml
ground-control/tests/: iliad_data_controller_test.py  packet_util_test.py  serial_data_controller_test.py  test_arm_control.py  test_math_util.py
ground-control/utils/: config_util.py  math_util.py  packet_util.py
irec-mavgen/: Cargo.toml
irec-mavgen/src/: main.rs
radio-board-software/receiver/: platformio.ini
radio-board-software/receiver/lib/STM32duino S2-LP/: .piopm
radio-board-software/receiver/lib/STM32duino S2-LP/src/: S2LP.cpp
radio-board-software/receiver/src/: receiver.cpp
radio-board-software/transmitter/lib/STM32duino S2-LP/src/: S2LP.cpp
radio-board-software/transmitter/src/: transmitter.cpp
