[package]
name = "ground-control"
version = "0.1.0"
edition = "2021"
default-run = "ground-control"

[dependencies]
log = "0.4.22"
env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] } 
eframe = { version = "0.29.1", features = ["persistence"] }
egui_extras = { version = "0.29.1", features = ["default", "image"] }
egui_plot = "0.29.0"
mavlink-bindgen = "0.13.1"
serde = { version = "1.0.215", features = ["derive"] }
serialport = "4.5.1"
rand = "0.8.5"
csv = "1.3.0"
image = "0.25.2"
egui = { version = "0.29.1" }

# Enable full optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
