[package]
name = "ground-control"
version = "0.1.0"
edition = "2021"
default-run = "ground-control"

[dependencies]
log = "0.4.25"
env_logger = { version = "0.11.6", default-features = false, features = [
    "auto-color",
    "humantime",
] }
eframe = { version = "0.30.0", features = ["persistence"] }
egui_extras = { version = "0.30.0", features = ["default", "image"] }
egui_plot = "0.30.0"
serde = { version = "1.0.215", features = ["derive"] }
serialport = "4.5.1"
rand = "0.8.5"
csv = "1.3.0"
image = "0.25.2"
egui = { version = "0.30.0", features = ["color-hex"] }
mavlink-core = "0.13.1"
num-traits = "0.2.19"
num-derive = "0.4.2"
bitflags = "2.8.0"

# Enable full optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
mavlink-bindgen = "0.13.1"

[features]
default = ["bsli2025", "serde"]
bsli2025 = []
serde = []
