[package]
name = "ground-control"
version = "0.1.0"
edition = "2021"
default-run = "ground-control"

[dependencies]
log = "0.4.26"
env_logger = { version = "0.11.6", default-features = false, features = [
    "auto-color",
    "humantime",
] }
eframe = { version = "0.31.1", features = ["persistence"] }
egui_extras = { version = "0.31.1", features = ["default", "image"] }
egui_plot = "0.31.0"
serde = { version = "1.0.218", features = ["derive"] }
serialport = "4.5.1"
rand = "0.9.0"
csv = "1.3.0"
image = "0.25.2"
egui = { version = "0.31.1", features = ["color-hex"] }
num-traits = "0.2.19"
num-derive = "0.4.2"
bitflags = "2.9.0"
hexdump = "0.1.2"
crc = "3.2.1"

# Enable full optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["serde"]
serde = []

[dev-dependencies]
